Ternario y 2da entrega

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Pagina Java-script</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
-  <div class="card-hamburgers"></div>
+<body>
+
+
+<div class="card-hamburgers"></div>
+<form class="formulario-combo"></form>
+<div id="listadoDeCombos"></div>
   
 <script src="js/miarchivo.js"></script>
 </body>
