--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 <div class="card-hamburgers"></div>
   
 <script src="js/miarchivo.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
